# Presto

./: .clang-format  .clangd  .gitignore  .gitmodules  .tmuxp.yaml  CMakeLists.txt  Cargo.toml  Doxyfile  FirstGameEngine.sln  GameEnginePog.sln  Presto.sln  README.md  build-chrono.sh  build.sh  pog.txt  premake5.lua  run_editor.sh
Presto/: CMakeLists.txt  Presto.vcxproj  Presto.vcxproj.filters
Presto/Presto/: Application.cpp  Application.h  CMakeLists.txt  Core.h  EntryPoint.h  GLFWAppWindow.cpp  GLFWAppWindow.h  InputManager.cpp  Log.cpp  Window.cpp  Window.h  pch.h  prpch.cpp  prpch.h
Presto/Presto/Common/: CMakeLists.txt  Camera.cpp  Vector3.cpp  Vector3.h  Vectors.cpp  Vectors.h
Presto/Presto/Components/: CMakeLists.txt  Polygon2D.cpp  Polygon2D.h  _ComponentHeader.h
Presto/Presto/Events/: ApplicationEvents.h  Event.h  KeyEvents.h  ObjectEvents.h
Presto/Presto/Modules/: CMakeLists.txt  Module.h  _ModulesHeader.h
Presto/Presto/Objects/: CMakeLists.txt  Object.cpp  Object.h
Presto/Presto/Platform/: CMakeLists.txt
Presto/include/: Presto.h  Types.h
Presto/include/Presto/: Presto.h
Presto/src/: Presto.h  prpch.cpp  prpch.h
Presto/src/Presto/: Application.cpp  Application.h  Core.h  EntryPoint.h  InputInterface.h  InputManager.cpp  InputManager.h  Log.cpp  Log.h  Window.h
core/: CMakeLists.txt
core/include/PrestoCore/: Application.h  Core.h  EntryPoint.h  Event.h  GLFWAppWindow.h  Log.h  Logging.h  Math.h  Presto.h  Window.h
core/src/: CMakeLists.txt  GLFWAppWindow.cpp  GLFWAppWindow.h  Log.cpp  Logging.cpp  pch.h
core/src/Common/: CMakeLists.txt  Camera.cpp  Vector3.cpp
core/src/Components/: CMakeLists.txt  RenderableProps.cpp
core/src/Modules/: CMakeLists.txt  ResourceManager.cpp
core/src/Rendering/: CMakeLists.txt  Mesh.cpp  RenderFactory.cpp  RenderLayer.cpp  Renderable.cpp  RendererFactory.cpp
core/src/ResourcesModule/: ResourceManager.cpp  ResourceManager.h
core/src/Scenes/: Scene.h  SceneAPI.cpp  SceneManager.cpp  SceneManager.h
core/src/Utils/: CMakeLists.txt  File.cpp
editor/: CMakeLists.txt
editor/src/: Constants.h  EditorUI.cpp  EditorUI.h  MasterpieceManager.cpp  MasterpieceManager.h  Project.h  ProjectManager.cpp  ProjectManager.h  main.cpp  pch.h
engine/: CMakeLists.txt  Cargo.toml
engine/include/Presto/: Aliases.h  Application.h  Assets.h  Components.h  Constants.h  Core.h  EntryPoint.h  Events.h  Managers.h  Materials.h  Math.h  Module.h  Objects.h  Physics.h  Platform.h  Presto.h  Runtime.h  SceneAPI.h  Textures.h  Types.h  UI.h  Utils.h
engine/src/: Application.cpp  CMakeLists.txt  GLFWAppWindow.cpp  Logging.cpp  Managers.h  Materials.cpp  Objects.cpp  Physics.cpp  lib.rs  pch.h  presto.rs
engine/src/API/: AssetAPI.cpp  CMakeLists.txt  MaterialsAPI.cpp  TexturesAPI.cpp
engine/src/Assets/: Asset.cpp  AssetPath.cpp  CMakeLists.txt  ImageAsset.cpp  ImportTypes.cpp  MaterialAsset.cpp  MeshAsset.cpp  ModelAsset.cpp  PBRMaterial.h
engine/src/Collision/: CMakeLists.txt  Shapes.cpp
engine/src/Components/: CMakeLists.txt  Camera.cpp  CameraComponent.cpp  RenderComponent.cpp  Transform.cpp  TransformComponent.cpp
engine/src/Debugging/: CMakeLists.txt  ComponentBits.h  DebugComponents.h  DebugUI.cpp  DebugUI.h  Masterpiece.h  MasterpieceManager.cpp  MasterpieceManager.h
engine/src/Input/: InputManager.h
engine/src/Memory/: Allocator.h  AllocatorTypes.h
engine/src/Modules/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  EntityManagerImpl.h  EventManager.cpp  EventManager.h  EventManager_backup.cpp  GLTFLoader.cpp  GLTFLoader.h  ModelLoader.h  Module.h  PhysicsManager.cpp  PhysicsManager.h  RenderingManager.h  ResourceManager.cpp  SceneManager.h
engine/src/Objects/: CMakeLists.txt  Entity.cpp  EntityManager.cpp  EntityManagerImpl.cpp  EntityManager_backup.cpp  Figure.cpp  Scene.cpp  SceneAPI.cpp  SceneManager.cpp
engine/src/Physics/: CMakeLists.txt  Force.cpp
engine/src/Rendering/: BoundingBox.cpp  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  DefaultMeshes.h  DefaultTextures.h  ErasedBytes.h  Material.cpp  MaterialInstance.cpp  MeshRegistrationData.h  Pipeline.cpp  PipelineBuilder.cpp  PipelineBuilderImpl.h  PipelineTypes.cpp  RenderLayer.cpp  RenderTypes.cpp  Renderable.cpp  Renderer.cpp  Renderer.h  RendererFactory.cpp  RendererFactory.h  RenderingManager.cpp  Shader.cpp  ShaderTypes.cpp  StructBuffer.h  TextureFactory.h  TextureInstance.cpp  UniformTypes.cpp  VertexAttribute.cpp  VertexProcessing.h  VertexTypes.cpp
engine/src/Resources/: Asset.cpp  CMakeLists.txt  ImageAsset.cpp  ImageResource.cpp  MaterialAsset.cpp  MaterialResource.cpp  MeshResource.cpp  ModelAsset.cpp  Resource.cpp
engine/src/Runtime/: CMakeLists.txt  Time.cpp
engine/src/Scenes/: CMakeLists.txt  Scene.h  SceneAPI.cpp  SceneManager.cpp  SceneManager.h
engine/src/Shaders/: CMakeLists.txt
engine/src/Utils/: CMakeLists.txt  DebugTimer.cpp  DebugTimer.h  File.cpp  IDGenerator.h  Math.h  Timer.cpp
engine/src/presto/: application.rs  entry.rs  (+3 more)
engine/test/: CMakeLists.txt  main.cpp  pch.h
old_stuff_to_fix/Presto/: CMakeLists.txt
src/: Application.cpp  CMakeLists.txt  GLFWAppWindow.cpp  GLFWAppWindow.h  Log.cpp  pch.h
src/Common/: CMakeLists.txt  Camera.cpp  Vector3.cpp
src/Components/: CMakeLists.txt  Polygon2D.cpp  RenderableProps.cpp  Transform.cpp
src/Editor/: CMakeLists.txt  EditorOverlay.cpp  EditorOverlay.h
src/Input/: InputManager.h
src/Modules/: CMakeLists.txt  GLTF.cpp  GLTF.h  ResourceManager.cpp
src/Objects/: CMakeLists.txt  Entity.cpp  EntityManager.cpp
src/Platform/: CMakeLists.txt
src/Rendering/: CMakeLists.txt  Mesh.cpp  RenderLayer.cpp  RenderTypes.h  Renderable.cpp  RendererFactory.cpp  RenderingManager.cpp  RenderingManager.h
src/ResourcesModule/: ResourceManager.cpp  ResourceManager.h
src/Runtime/: Time.cpp
src/Scenes/: CMakeLists.txt  Scene.h  SceneAPI.cpp  SceneManager.cpp  SceneManager.h
src/Shaders/: CMakeLists.txt
src/Utils/: CMakeLists.txt  DebugTimer.h  File.cpp
src/game/: note.h
src/platform/: WindowsInputPoller.cpp  WindowsInputPoller.h  win32_platform.cpp
(+612 files in other folders)
